<resources>
    <string name="app_name">Quick App Updater</string>
    <string name="download_and_install_update">Download and install/update</string>
    <string name="refresh_list">Refresh list</string>
    <string name="select_the_app_to_download">Select the app to download</string>
    <string name="app_list_json_file_url">App list JSON file URL:</string>
    <string name="select_an_application_to_install_update">Select an application to install/update:</string>
    <string name="app_refresh_no_json">Applications list wasn\'t loaded. Please run the Refresh List action to obtain the applications list.</string>
    <string name="app_is_not_selected">App is not selected</string>
</resources>