<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/updaterActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/updaterActivityZ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/appPath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/select_the_app_to_download" />

        <Space
            android:id="@+id/spacerBelowAppName"
            android:layout_below="@+id/appPath"
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/repoUrlLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spacerBelowAppName"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/app_list_json_file_url" />

        <EditText
            android:id="@+id/repoUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/repoUrlLabel"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:inputType="textUri" />

        <Space
            android:id="@+id/spacerBetweenRepoAndList"
            android:layout_below="@+id/repoUrl"
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/appToUpdateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spacerBetweenRepoAndList"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/select_an_application_to_install_update" />

        <Spinner
            android:id="@+id/appToUpdate"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/appToUpdateLabel"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <Space
            android:id="@+id/spacerBetweenListAndRefresh"
            android:layout_below="@+id/appToUpdate"
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/refreshList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spacerBetweenListAndRefresh"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/refresh_list" />

        <Space
            android:id="@+id/spacerBetweenButtons"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/refreshList" />

        <Button
            android:id="@+id/doDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spacerBetweenButtons"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/download_and_install_update" />

    </RelativeLayout>
</ScrollView>
